# journal-finder-api

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/api/: routes.py
app/services/: compare_service.py  embedding_classifier.py  keyword_classifier.py  tfidf_classifier.py
tests/: conftest.py  test_api.py  test_compare_service.py  test_embedding_classifier.py  test_keyword_classifier.py  test_tfidf_classifier.py
